Achievements service, module, controller added.
